<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_gravity="center">
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_des">

    </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical">

    <Button
        android:id="@+id/takeImage1"
        android:layout_width="185dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/Take_picture">

    </Button>

    <EditText
        android:id="@+id/updateItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top"
        android:inputType="textPersonName"
        android:hint="@string/Add_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/updateDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Add_des"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/updateDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:text="@string/Update" />

    <Button
        android:id="@+id/reminderButton"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:text="@string/Reminder" />

    </LinearLayout>

</LinearLayout>
