<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.8">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_des">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical">

        <Button
        android:id="@+id/takeImage"
        android:layout_width="185dp"
            android:layout_gravity="center"
        android:layout_height="75dp"
        android:text="@string/Take_picture">

        </Button>


    <EditText
        android:id="@+id/addItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top"
        android:inputType="textPersonName"
        android:hint="@string/Add_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/addDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Add_des"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/addDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/inputDate"
        android:textSize="18sp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/displayDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:text="@string/Save" />

    </LinearLayout>


</LinearLayout>
